Fix issue where user menu is hidden behind the workbench

--- a/src/stylesheets/workbench/index.styl
+++ b/src/stylesheets/workbench/index.styl
@@ -197,7 +197,7 @@ $workbench-middle-width = 100% - (2 * $workbench-sidebar-width)
   padding-left: $workbench-header-horizontal-padding
   padding-right: $workbench-header-horizontal-padding
   position relative
-  z-index: 10
+  z-index: 6
   min-height: $workbench-header-height
   width: 100%
   flex-shrink: 0
